--- a/sdi-entrega1-2021-1004/src/main/resources/messages_en.properties
+++ b/sdi-entrega1-2021-1004/src/main/resources/messages_en.properties
@@ -91,6 +91,7 @@ Ejemplo.name=John
 Ejemplo.lastName=Smith
 Ejemplo.pswd=Enter the password
 Ejemplo.repetirPswd=Repeat the password
-Ejemplo.descripcion=Description
-Ejemplo.nota=0-10
+Ejemplo.titulo=Introduce the title of the offer
+Ejemplo.descripcion=Description of the offer
+Ejemplo.nota=Introduce a number greater than 0
 Ejemplo.categoria=A, B, C...
