--- a/sdi-entrega1-2021-1004/src/main/resources/messages_es.properties
+++ b/sdi-entrega1-2021-1004/src/main/resources/messages_es.properties
@@ -91,6 +91,7 @@ Ejemplo.name=Juan
 Ejemplo.lastName=García
 Ejemplo.pswd=Introduzca la contraseña
 Ejemplo.repetirPswd=Repita la contraseña
-Ejemplo.descripcion=Descripción
-Ejemplo.nota=0-10
+Ejemplo.titulo=Introduce el titulo de la oferta
+Ejemplo.descripcion=Descripción de la oferta
+Ejemplo.nota=Introduce un numero mayor que 0
 Ejemplo.categoria=A, B, C...
