--- a/sdi-entrega1-2021-1004/src/main/resources/messages_fr.properties
+++ b/sdi-entrega1-2021-1004/src/main/resources/messages_fr.properties
@@ -1,12 +1,12 @@
 welcome.message=Bienvenue sur la page
 language.change= Langage
 language.en=English
-language.es=Español
+language.es=Espaï¿½ol
 language.fr=Francais
 login.message=Identifiez-vous
 signup.message=S'inscrire
 Error.empty= Ce champ ne peut pas etre vide
-Error.signup.email.duplicate=Ce email existe deja .
+Error.signup.email.duplicate=Ce email existe dejaï¿½.
 Error.signup.name.length=Le nom doit comporter entre 4 et 24 caracteres.
 Error.signup.lastName.length=Le nom de famille doit comprendre entre 4 et 24 caracteres.
 Error.signup.password.length =Le mot de passe doit comporter entre 4 et 24 caracteres.
@@ -89,6 +89,7 @@ Ejemplo.name=Jean
 Ejemplo.lastName=Pierre
 Ejemplo.pswd=Entrer le mot de passe
 Ejemplo.repetirPswd=Repitater le mot de passe
+Ejemplo.titulo=Introduce el titulo de la oferta
 Ejemplo.descripcion=Description
-Ejemplo.nota=0-10
+Ejemplo.nota=0 < num
 Ejemplo.categoria=A, B, C...
